--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@aws-sdk/client-dynamodb": "^3.287.0",
     "@aws-sdk/lib-dynamodb": "^3.288.0",
     "@fastify/autoload": "^5.0.0",
+    "@fastify/cookie": "^8.3.0",
     "@fastify/env": "^4.2.0",
     "@fastify/jwt": "^6.7.0",
     "@fastify/sensible": "^5.0.0",
+    "@fastify/session": "^10.1.1",
     "fastify": "^4.0.0",
     "fastify-bcrypt": "^1.0.1",
     "fastify-mailer": "^2.3.1",
     "fastify-plugin": "^4.0.0",
-    "kuuid": "^1.0.1"
+    "i": "^0.3.7",
+    "kuuid": "^1.0.1",
+    "npm": "^9.6.2"
   },
   "devDependencies": {
     "tap": "^16.1.0"
